--- a/myapp.json
+++ b/myapp.json
@@ -7,5 +7,7 @@
 		"gems",
 		"politics"
 	],
-	"website": "http://value-your-vote.herokuapp.com"
+	"website": "http://value-your-vote.herokuapp.com",
+	"repository": "https://github.com/EdDeAlmeidaJr/emerald-to-heroku",
+	"success_url": "/web/index.html"
 }
